Build a Fraction: Shapes: Made the container node go to the play area if it is empty, otherwise go to the toolbox
# 1.00.34 (66906) Aug 13, 2012
Build a Fraction: Numbers: Fixed: Fraction skeleton cannot be dragged out of toolbox after being ejected from a collection box
Build a Fraction: Switched from blue "split" button to yellow "undo" button
Build a Fraction: Shapes: Fixed: When a new container comes out (after completing a target), it does not go to the same "centered" place as the original one
# 1.00.33 (66874) Aug 12, 2012
Build a Fraction: Numbers: Center the initial fraction skeleton and floating panel under the "Level #" heading
Build a Fraction: Shapes: Center the initial container and floating panel under the "Level #" heading
Build a Fraction: Fixed: Dragging on back button in a level makes buggy looking effects
Build a Fraction: Shapes: Clear divisions from a container when ejected from a collection box
# 1.00.32 (66858) Aug 10, 2012
Build a Fraction: Shapes: Possible solution for bugs such as pie slices flying to the wrong location, and exceptions
# 1.00.31 (66849) Aug 10, 2012
Build a Fraction: Shapes: Decreased vertical height of collection boxes by 5% and spaced them out further
# 1.00.30 (66845) Aug 10, 2012
Build a Fraction: Shapes: Added extra shapes for creating one of the pieces in levels 2 and 5
Build a Fraction: Shapes: Fixed equality test for creating interesting fraction shape sets
# 1.00.29 (66843) Aug 10, 2012
# 1.00.28 (66841) Aug 10, 2012
Build a Fraction: Shapes: Makes it so a node cannot be picked while animating, that causes glitchy looking problems and makes nodes end up in the wrong place
Build a Fraction: Shapes: Fixed: When a level first opens, if you double click the container in the play area, another one flies out.
Build a Fraction: Increased font on carousel dot labels, and increased spacing between dots
# 1.00.27 (66819) Aug 10, 2012
Build a Fraction: Converted to SimSharingCanvasBoundedDragHandler for sim sharing events