@@ -1,0 +1,19 @@
+// Copyright 2002-2012, University of Colorado
+package edu.colorado.phet.fractions.buildafraction.view.shapes;
+
+import edu.umd.cs.piccolo.activities.PActivity;
+import edu.umd.cs.piccolo.activities.PActivity.PActivityDelegate;
+
+/**
+ * @author Sam Reid
+ */
+public class NullDelegate implements PActivityDelegate {
+    @Override public void activityStarted( final PActivity activity ) {
+    }
+
+    @Override public void activityStepped( final PActivity activity ) {
+    }
+
+    @Override public void activityFinished( final PActivity activity ) {
+    }
+}
